config/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-crud-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-crud-demo
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: simple          
    spec:
      containers:
      - name: quarkus-crud-demo
        image: quay.io/rafaeltuelho/devspaces-quarkus-crud-demo:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            protocol: TCP
        # envFrom:
        #   - configMapRef:
        #       name: app-config
