config/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devspaces-quarkus-crud-demo
  name: quarkus-crud-demo
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
  selector:
    app: quarkus-crud-demo
