config/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-crud-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: quarkus-crud-demo
    weight: 100
  wildcardPolicy: None
